[gd_scene load_steps=63 format=3 uid="uid://brimjg1m4o114"]

[ext_resource type="Script" path="res://player.gd" id="1_83to2"]
[ext_resource type="Texture2D" uid="uid://c17tak66gx8mi" path="res://assets/Base Character - Free/idle-down.png" id="2_m2hmj"]
[ext_resource type="Texture2D" uid="uid://dtg22i50s3bg" path="res://assets/Base Character - Free/idle-right.png" id="2_mamwv"]
[ext_resource type="PackedScene" uid="uid://baqrukpkt3n7l" path="res://joystick.tscn" id="3_ab2fy"]
[ext_resource type="Texture2D" uid="uid://dp6vmy7kphqg4" path="res://assets/Base Character - Free/idle-left.png" id="3_j22h7"]
[ext_resource type="Texture2D" uid="uid://c4jmu4f4mtufn" path="res://assets/lifebar_under.png" id="4_rv1dm"]
[ext_resource type="Texture2D" uid="uid://c3ew1nhun7mdn" path="res://assets/Base Character - Free/idle-top.png" id="5_bam0m"]
[ext_resource type="Texture2D" uid="uid://b6lsafxoti1xa" path="res://assets/lifebar_progress.png" id="5_hnp8a"]
[ext_resource type="Texture2D" uid="uid://debj3ddigi4fr" path="res://assets/Base Character - Free/walk-down.png" id="6_fob38"]
[ext_resource type="Texture2D" uid="uid://cmcdigtplrqc7" path="res://assets/Base Character - Free/walk-left.png" id="7_5fjwi"]
[ext_resource type="Texture2D" uid="uid://b1c6xyoyujqfe" path="res://assets/Base Character - Free/walk-right.png" id="8_aed2n"]
[ext_resource type="Texture2D" uid="uid://bx6mq1a57agoo" path="res://assets/Base Character - Free/walk-top.png" id="9_rfrxg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fty5k"]
atlas = ExtResource("2_m2hmj")
region = Rect2(0, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xmwj"]
atlas = ExtResource("2_m2hmj")
region = Rect2(13, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_rjnvw"]
atlas = ExtResource("2_m2hmj")
region = Rect2(26, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_hikwv"]
atlas = ExtResource("2_m2hmj")
region = Rect2(39, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_aosow"]
atlas = ExtResource("3_j22h7")
region = Rect2(0, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvxxn"]
atlas = ExtResource("3_j22h7")
region = Rect2(11, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_hnpph"]
atlas = ExtResource("3_j22h7")
region = Rect2(22, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7yss3"]
atlas = ExtResource("3_j22h7")
region = Rect2(33, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_80tly"]
atlas = ExtResource("2_mamwv")
region = Rect2(0, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_d6ksv"]
atlas = ExtResource("2_mamwv")
region = Rect2(11, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxomf"]
atlas = ExtResource("2_mamwv")
region = Rect2(22, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_p7tc5"]
atlas = ExtResource("2_mamwv")
region = Rect2(33, 0, 11, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2oem"]
atlas = ExtResource("5_bam0m")
region = Rect2(0, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgd35"]
atlas = ExtResource("5_bam0m")
region = Rect2(13, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t6iv"]
atlas = ExtResource("5_bam0m")
region = Rect2(26, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ekxca"]
atlas = ExtResource("5_bam0m")
region = Rect2(39, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_guqga"]
atlas = ExtResource("6_fob38")
region = Rect2(0, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_l6nad"]
atlas = ExtResource("6_fob38")
region = Rect2(13, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8ynm"]
atlas = ExtResource("6_fob38")
region = Rect2(26, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qhp0b"]
atlas = ExtResource("6_fob38")
region = Rect2(39, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sd3g"]
atlas = ExtResource("6_fob38")
region = Rect2(52, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_p40ob"]
atlas = ExtResource("6_fob38")
region = Rect2(65, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_64iwf"]
atlas = ExtResource("6_fob38")
region = Rect2(78, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_njlcm"]
atlas = ExtResource("6_fob38")
region = Rect2(91, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_qx0x5"]
atlas = ExtResource("7_5fjwi")
region = Rect2(0, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcn02"]
atlas = ExtResource("7_5fjwi")
region = Rect2(13, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5if4"]
atlas = ExtResource("7_5fjwi")
region = Rect2(26, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb0qv"]
atlas = ExtResource("7_5fjwi")
region = Rect2(39, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_p5j7u"]
atlas = ExtResource("7_5fjwi")
region = Rect2(52, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv5b4"]
atlas = ExtResource("7_5fjwi")
region = Rect2(65, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntlx8"]
atlas = ExtResource("7_5fjwi")
region = Rect2(78, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxoqw"]
atlas = ExtResource("7_5fjwi")
region = Rect2(91, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_7jkh1"]
atlas = ExtResource("8_aed2n")
region = Rect2(0, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy44j"]
atlas = ExtResource("8_aed2n")
region = Rect2(13, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4adt"]
atlas = ExtResource("8_aed2n")
region = Rect2(26, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_2wkjo"]
atlas = ExtResource("8_aed2n")
region = Rect2(39, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_0stw8"]
atlas = ExtResource("8_aed2n")
region = Rect2(52, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_vaxxm"]
atlas = ExtResource("8_aed2n")
region = Rect2(65, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bu4t"]
atlas = ExtResource("8_aed2n")
region = Rect2(78, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_4mm7m"]
atlas = ExtResource("8_aed2n")
region = Rect2(91, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih70"]
atlas = ExtResource("9_rfrxg")
region = Rect2(0, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_sptqg"]
atlas = ExtResource("9_rfrxg")
region = Rect2(13, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_m31qu"]
atlas = ExtResource("9_rfrxg")
region = Rect2(26, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0whe"]
atlas = ExtResource("9_rfrxg")
region = Rect2(39, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_da0eb"]
atlas = ExtResource("9_rfrxg")
region = Rect2(52, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_1s2j2"]
atlas = ExtResource("9_rfrxg")
region = Rect2(65, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_tkfwt"]
atlas = ExtResource("9_rfrxg")
region = Rect2(78, 0, 13, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gmtw"]
atlas = ExtResource("9_rfrxg")
region = Rect2(91, 0, 13, 14)

[sub_resource type="SpriteFrames" id="SpriteFrames_1d5vd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fty5k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xmwj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rjnvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hikwv")
}],
"loop": true,
"name": &"idle-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aosow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvxxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hnpph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7yss3")
}],
"loop": true,
"name": &"idle-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_80tly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d6ksv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxomf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p7tc5")
}],
"loop": true,
"name": &"idle-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2oem")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgd35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4t6iv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ekxca")
}],
"loop": true,
"name": &"idle-up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_guqga")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l6nad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8ynm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhp0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sd3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p40ob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_64iwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_njlcm")
}],
"loop": true,
"name": &"walk-down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qx0x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcn02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5if4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb0qv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p5j7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv5b4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntlx8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxoqw")
}],
"loop": true,
"name": &"walk-left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7jkh1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy44j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4adt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2wkjo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0stw8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vaxxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bu4t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4mm7m")
}],
"loop": true,
"name": &"walk-right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sptqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m31qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0whe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_da0eb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1s2j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkfwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gmtw")
}],
"loop": true,
"name": &"walk-up",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hq8dt"]
radius = 16.6667
height = 50.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(545, 959)
scale = Vector2(3, 3)
script = ExtResource("1_83to2")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(5.5, -5.66667)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_1d5vd")
animation = &"idle-down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5.16667, -6)
shape = SubResource("CapsuleShape2D_hq8dt")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="JoystickControl" type="Control" parent="UI"]
layout_mode = 3
anchor_left = 0.506
anchor_top = 0.836
anchor_right = 0.506
anchor_bottom = 0.836
offset_left = -162.48
offset_top = -155.12
offset_right = 163.52
offset_bottom = 153.88
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_group_ = true

[node name="Joystick" parent="UI/JoystickControl" instance=ExtResource("3_ab2fy")]
position = Vector2(166, 152)

[node name="LifeBarControl" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2.0
offset_top = -144.0
offset_right = 38.0
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_group_ = true

[node name="LifeBar" type="TextureProgressBar" parent="UI/LifeBarControl"]
layout_mode = 0
offset_left = -29.0
offset_top = 39.0
offset_right = 74.0
offset_bottom = 56.0
max_value = 500.0
nine_patch_stretch = true
texture_under = ExtResource("4_rv1dm")
texture_progress = ExtResource("5_hnp8a")

[node name="LifeCounter" type="Label" parent="UI/LifeBarControl"]
layout_mode = 0
offset_left = -3.0
offset_right = 48.0
offset_bottom = 42.0
theme_override_font_sizes/font_size = 30
text = "500"
horizontal_alignment = 1
vertical_alignment = 1
